# tisq

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  Makefile.toml  README.md  install.sh  patched-darwin.sh  release.toml
.github/workflows/: build.yaml  clean.yaml  test_mac_build.yaml
changelog/: lint.mjs  package-lock.json  package.json
docker/: Dockerfile.alpine  Dockerfile.debian
src/: cli.rs  files.rs  main.rs  statics.rs  tui.rs
src/app/: connection.rs  event_dispatcher.rs  mod.rs  model.rs  spinner_ticking_port.rs  status.rs  user_event.rs
src/app/cmd/: add_server.rs  mod.rs
src/app/connection/: executing.rs  mod.rs  posgres.rs  types.rs
src/app/keybindings/: action.rs  keybindings.rs  mod.rs  subclause.rs
src/app/snippets/: mod.rs  snippets.rs
src/app/storage/: editors_storage.rs  id.rs  mod.rs  storage.rs
src/cmd/: add_server.rs
src/components/: browser.rs  command_line.rs  editor.rs  error_result.rs  execute_result_table.rs  exit.rs  global_keys.rs  mod.rs  snippets_table.rs  tabs.rs
src/components/add_server_form/: input_text.rs  mod.rs  submit.rs
src/components/settings/: input_radio.rs  mod.rs
src/components/status/: mod.rs  pressed_key.rs  span.rs  spinner.rs  status_phantom.rs
src/config/: mod.rs
vhs/: .gitignore  Dockerfile  base.tape  config.toml  record.sh
