[package]
edition = "2021"
name = "tisq"
version = "0.1.0"
description = "terminal UI for SQL databases"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tuirealm = { version = "1.9.0", features = [ "termion" ]} 
# tuirealm = "1.9.0"
# tuirealm = { git = 'https://github.com/strowk/tui-realm.git', branch = "issue-54-fix", features = [ "derive", "ratatui", "crossterm" ] }
# tui-realm-textarea = {path = "../tui-realm-textarea"}
tui-realm-textarea = { git = "https://github.com/strowk/tui-realm-textarea.git", branch = "improvements", version = "1.1.2" }
# tuirealm = {path = '../tui-realm', features = ["derive", "ratatui", "crossterm"]}
tuirealm = { git = "https://github.com/strowk/tui-realm.git", branch = "improvements", features = [
 "derive", 
 "ratatui", 
 "crossterm"
] , version = "1.9.0" }
# tui-realm-textarea = "^1.1.0"
# tui-realm-stdlib = "1.3.0"
eyre = "0.6.8"
kv = {version = "0.24.0", features = ["json-value"]}
serde = "1.0.188"
serde_json = "1.0.107"
# tui-realm-stdlib = {path = "../tui-realm-stdlib"}
tui-realm-stdlib = { git = "https://github.com/strowk/tui-realm-stdlib.git", branch = "improvements", version = "1.3.0" }
# tui-realm-treeview = {path = "../tui-realm-treeview"}
tui-realm-treeview = { git = "https://github.com/strowk/tui-realm-treeview.git", branch = "improvements", version = "1.2.0" }
sqlx = { version = "0.7", features = [ "runtime-async-std", "tls-rustls", "postgres" ] }
async-std = "1.12.0"
futures = "0.3.28"
log = "0.4.20"
simple-logging = "2.0.2"
ordered_hash_map = "0.2.0"
itertools = "0.11.0"
# tui-realm-treeview = "^1.1.0"

[dependencies.uuid]
features = ["v4", "fast-rng", "serde"]
version = "1.4.1"
